# ITaP_CP

./: CMakeLists.txt  console_interface.cpp  console_interface.h  file_interface.cpp  file_interface.h  main.cpp  sorting_algorithms.cpp  sorting_algorithms.h  unit_tests.cpp  unit_tests.h  utils.cpp  utils.h  КП_Пояснительная_записка_9_OO.docx  КП_Пояснительная_записка_9_W.docx  КП_Презентация.pptx
